<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <LinearLayout
        android:id="@+id/daily_timetable_list_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/daily_timetable_list_item_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/daily_timetable_list_item_start_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_start_time"
            android:textAlignment="center"
            android:textSize="16sp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/daily_timetable_list_item_end_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_end_time"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/daily_timetable_list_item_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/daily_timetable_list_item_time"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/daily_timetable_list_item_subject_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_subject_name"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/title_classroom" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/daily_timetable_list_item_classroom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_classroom" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="start">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/title_teachers" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/daily_timetable_list_item_teachers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_teachers" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>