<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <TextView
        android:id="@+id/title_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_group"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title_group"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt_select_faculty"
            android:hint="@string/hint_select_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:layout_marginBottom="8dp"
            android:text="@string/example_week" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/week_titles_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@+id/select_week"
        android:background="@color/cardview_dark_background" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/week_timetable_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/week_titles_separator"
        tools:itemCount="3" />

</androidx.constraintlayout.widget.ConstraintLayout>